<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="3"
    android:padding="16dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/image_avengers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:focusable="true"
        android:src="@drawable/avengers_end_game"
        android:scaleType="centerCrop"
        android:clickable="true"
        android:contentDescription="@string/cdAvengers" />

    <ImageView
        android:id="@+id/image_ddm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:focusable="true"
        android:src="@drawable/dia_despues_de_manana"
        android:scaleType="centerCrop"
        android:clickable="true"
        android:contentDescription="@string/cdDdm" />

    <ImageView
        android:id="@+id/image_jurassic_park"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:focusable="true"
        android:src="@drawable/jurassic_park"
        android:scaleType="centerCrop"
        android:clickable="true"
        android:contentDescription="@string/cdJPark" />

    <ImageView
        android:id="@+id/image_era_de_hielo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:focusable="true"
        android:src="@drawable/la_era_de_hielo"
        android:scaleType="centerCrop"
        android:clickable="true"
        android:contentDescription="@string/cdEraHielo" />

    <ImageView
        android:id="@+id/image_matrix"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:focusable="true"
        android:src="@drawable/matrix"
        android:scaleType="centerCrop"
        android:clickable="true"
        android:contentDescription="@string/cdMatrix" />

    <ImageView
        android:id="@+id/image_yo_robot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:focusable="true"
        android:src="@drawable/yo_robot"
        android:scaleType="centerCrop"
        android:clickable="true"
        android:contentDescription="@string/cdRobot" />
</GridLayout>